--- a/documentation/using-subsystems.html
+++ b/documentation/using-subsystems.html
@@ -99,6 +99,7 @@
 <ol>
 <li>Your site&rsquo;s default application must also be implemented as a subsystem. By default, the framework will look in the sub-directory <code>home</code>. Setting <code>defaultSubsystem</code> overrides this default, letting you specify another folder as the default application module.</li>
 <li>A sitewide layout can be specified at <code>common/layouts/default.cfm</code> (by default). If this file exists, it will be applied. Setting <code>siteWideLayoutSubsystem</code> overrides this default, letting you specify another folder to look in for <code>layouts/default.cfm</code>.</li>
+<li>Any models (beans and service) you would like accessible by all subsystems should remain in the <code>/model</code> directory.</li>
 </ol>
 
 
