"Version of lisp"?
As I start reading this you say "It's a Lisp" , I have no idea (at this point in the docs) what a Lisp is. saying it's a verison of the Listp programming language

--- a/documentation/3.5/cfml-and-clojure.html
+++ b/documentation/3.5/cfml-and-clojure.html
@@ -88,7 +88,7 @@
 
 <h1>Clojure and CFML Sitting in a tree</h1>
 
-<p>Back in 2010, I started to learn Clojure. It&rsquo;s a Lisp that runs on the JVM. It&rsquo;s a mostly pure functional programming language.
+<p>Back in 2010, I started to learn Clojure. It&rsquo;s a version of Lisp programming language that runs on the JVM. It&rsquo;s a mostly pure functional programming language.
 It&rsquo;s very simple &mdash; very little syntax &mdash; but very powerful and expressive. It has a thriving community and ecosystem. Being a
 functional programming language it favors immutable data structures and higher order functions (map, filter, reduce, etc) which
 makes programs easy to reason about and it also makes concurrent programming pretty easy. No more thread safety issues!</p>
